# pwr-pamsi-chess

./: CMakeLists.txt  ChessBasicBrancher.cpp  ChessGame.hpp  GameState.cpp  GameState.hpp  GraphList.hpp  IBrancher.hpp  MinMax.cpp  MinMax.hpp  main.cpp
ChessGame/: BoardPositionToPossibleMovesMap.cpp  BoardPositionToPossibleMovesMap.hpp  ChessBasicBrancher.cpp  ChessBasicBrancher.hpp  ChessGame.cpp  ChessGame.hpp  ChessGameData.cpp  ChessGameData.hpp  ChessGameState.cpp  ChessGameState.hpp  ChessHelpers.cpp  ChessHelpers.hpp  DummyPlayer.cpp  DummyPlayer.hpp  Enums.cpp  Enums.hpp  GameState.cpp  Player.cpp  Player.hpp  PlayerAi.cpp  PlayerAi.hpp
ChessGame/States/: ChessGameCheckState.cpp  ChessGameCheckState.hpp  ChessGameDefaultState.cpp  ChessGameDefaultState.hpp  ChessGameEndState.cpp  ChessGameEndState.hpp  ChessGameStateMachine.cpp  ChessGameStateMachine.hpp  ChessGameStatesHelpers.cpp  ChessGameStatesHelpers.hpp  IChessGameState.hpp
Observer/: Observer.hpp  Subject.hpp
widgets/: ChessSFMLWidget.cpp  ChessSFMLWidget.hpp  QSFMLWidget.cpp  QSFMLWidget.hpp
